src/main/java/com/example/warsztat_samochodowy/error/ClientNotFoundException.java
package com.example.warsztat_samochodowy.error;

public class ClientNotFoundException extends RuntimeException {
    public ClientNotFoundException(String message) {
        super(message);
    }
}
